// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BurndownChart When there are 3 errors, Then error caused by 'under calculation' is not displayed 1`] = `
<div>
  <div>
    <div
      class="tlp-alert-warning"
    >
      
            'duration' field is empty or invalid.
        
    </div>
     
    <div
      class="tlp-alert-warning"
    >
      
            'start_date' field is empty or invalid.
        
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`BurndownChart When there are an error on duration and calculation, Then only error on duration is displayed 1`] = `
<div>
  <div>
    <div
      class="tlp-alert-warning"
    >
      
            'duration' field is empty or invalid.
        
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`BurndownChart When there are an error on start date and calculation, Then only error on start date is displayed 1`] = `
<div>
  <div>
    <!---->
     
    <div
      class="tlp-alert-warning"
    >
      
            'start_date' field is empty or invalid.
        
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`BurndownChart When there are an error on start date and duration, Then they are displayed 1`] = `
<div>
  <div>
    <div
      class="tlp-alert-warning"
    >
      
            'duration' field is empty or invalid.
        
    </div>
     
    <div
      class="tlp-alert-warning"
    >
      
            'start_date' field is empty or invalid.
        
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`BurndownChart When there are only an error on calculation, Then it is displayed 1`] = `
<div>
  <div>
    <!---->
     
    <!---->
     
    <div
      class="tlp-alert-warning"
    >
      
            Burndown is under calculation. It will be available in a few minutes.
        
    </div>
  </div>
</div>
`;

exports[`BurndownChart When there are only an error on duration, Then it is displayed 1`] = `
<div>
  <div>
    <div
      class="tlp-alert-warning"
    >
      
            'duration' field is empty or invalid.
        
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`BurndownChart When there are only an error on start date, Then it is displayed 1`] = `
<div>
  <div>
    <!---->
     
    <div
      class="tlp-alert-warning"
    >
      
            'start_date' field is empty or invalid.
        
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`BurndownChart When there are rest error and others errors, Then only rest error is displayed 1`] = `
<div>
  <div
    class="tlp-alert-danger"
  >
    
        404 Not found
    
  </div>
</div>
`;
